# lab-5

./: CMakeLists.txt
include/: atomic_counter.h  blur.h  color.h  image_utils.h
src/: atomic_counter.cpp  blur.cpp  image_utils.cpp  main.cpp
